--- a/clash/ziyong.ini
+++ b/clash/ziyong.ini
@@ -1,30 +1,30 @@
-ruleset=DIRECT,
-ruleset=REJECT,
-ruleset=🍎 Apple,
-ruleset=🎬 Emby,
-ruleset=📲 Telegram,
-ruleset=Final,
-ruleset=🎬 Bilibili,
-ruleset=🎬 Donghuafeng,
+ruleset=DIRECT,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/DIRECT.list
+ruleset=REJECT,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/REJECT.list
+ruleset=🍎 Apple,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Apple.list
+ruleset=🎬 Emby,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Emby.list
+ruleset=📲 Telegram,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Telegram.list
+ruleset=Final,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Final2.list
+ruleset=🎬 Bilibili,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Bilibili.list
+ruleset=🎬 Donghuafeng,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Donghuafeng.list
 ruleset=🎬 myTVSUPER,
-ruleset=📲 LineTV,
-ruleset=🎬 iQiyi,
-ruleset=🎵 Tiktok,
-ruleset=🎬 YouTube,
-ruleset=📺 Disney,
-ruleset=📺 Netflix,
-ruleset=🌐 Google,
-ruleset=🐹 OpenAI,
-ruleset=🖥 Microsoft,
-ruleset=🖥 Learning,
-ruleset=📟 Twitter
-ruleset=📺 International-Media,
-ruleset=China-Media,
-ruleset=Hijacking,
-ruleset=China-Websites,
-ruleset=Final,
-ruleset=China-Websites,
-ruleset=Final,
+ruleset=📲 LineTV,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/LineTV.list
+ruleset=🎬 iQiyi,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/iQiyi.list
+ruleset=🎵 Tiktok,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Tiktok.list
+ruleset=🎬 YouTube,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/YouTube.list
+ruleset=📺 Disney,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Disney.list
+ruleset=📺 Netflix,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Netflix.list
+ruleset=🌐 Google,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Google.list
+ruleset=🐹 OpenAI,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/OpenAI.list
+ruleset=🖥 Microsoft,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Microsoft.list
+ruleset=🖥 Learning,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Learning.list
+ruleset=📟 Twitter,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Twitter.list
+ruleset=📺 International-Media,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/International-Media.list
+ruleset=China-Media,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/China-Media.list
+ruleset=Hijacking,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Hijacking.list
+ruleset=China-Websites,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/China-Websites.list
+ruleset=Final,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Final.list
+ruleset=China-Websites,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/China-Websites1.list
+ruleset=Final,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Final1.list
 
 custom_proxy_group=Nexitally`select`[].*
 custom_proxy_group=🎬 Emby`select`[]Nexitally`[].*
