--- a/clash/ziyong.ini
+++ b/clash/ziyong.ini
@@ -6,7 +6,7 @@ ruleset=📲 Telegram,https://raw.githubusercontent.com/boluosaidong9/boluosaido
 ruleset=Final,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Final2.list
 ruleset=🎬 Bilibili,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Bilibili.list
 ruleset=🎬 Donghuafeng,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Donghuafeng.list
-ruleset=🎬 myTVSUPER,
+ruleset=🎬 myTVSUPER,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/myTVSUPER.list
 ruleset=📲 LineTV,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/LineTV.list
 ruleset=🎬 iQiyi,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/iQiyi.list
 ruleset=🎵 Tiktok,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Tiktok.list
