--- a/clash/ziyong.ini
+++ b/clash/ziyong.ini
@@ -26,25 +26,25 @@ ruleset=Final,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/
 ruleset=China-Websites,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/China-Websites1.list
 ruleset=Final,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Final1.list
 
-custom_proxy_group=Nexitally`select`[].*
-custom_proxy_group=🎬 Emby`select`[]Nexitally`[].*
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]Nexitally`[].*
-custom_proxy_group=📲 Telegram`select`[]Nexitally`[]DIRECT`[].*
-custom_proxy_group=🎬 Bilibili`select`[]DIREC`[]Nexitally`[].*
-custom_proxy_group=🎬 Bilibili`select`[]Nexitally`[]DIREC`[].*
-custom_proxy_group=🎬 myTVSUPER`select`[]Nexitally`[]DIRECT`[].*
-custom_proxy_group=📲 LineTV`select`[]Nexitally`[]DIRECT`[].*
-custom_proxy_group=🎬 iQiyi`select`[]Nexitally`[]DIRECT`[].*
-custom_proxy_group=🎵 Tiktok`select`[]Nexitally`[]DIRECT`[].*
-custom_proxy_group=🎬 YouTube`select`[]Nexitally`[]DIRECT`[].*
-custom_proxy_group=📺 Disney`select`[]Nexitally`[]DIRECT`[].*
-custom_proxy_group=📺 Netflix`select`[]Nexitally`[]DIRECT`[].*
-custom_proxy_group=🌐 Google`select`[]Nexitally`[]DIRECT`[].*
-custom_proxy_group=🐹 OpenAI`select`[]Nexitally`[]DIRECT`[].*
-custom_proxy_group=🖥 Microsoft`select`[]Nexitally`[]DIRECT`[].*
-custom_proxy_group=🖥 Learning`select`[]Nexitally`[]DIRECT`[].*
+custom_proxy_group=Nexitally`select`.*
+custom_proxy_group=🎬 Emby`select`[]Nexitally`.*
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]Nexitally`.*
+custom_proxy_group=📲 Telegram`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🎬 Bilibili`select`[]DIREC`[]Nexitally`.*
+custom_proxy_group=🎬 Bilibili`select`[]Nexitally`[]DIREC`.*
+custom_proxy_group=🎬 myTVSUPER`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=📲 LineTV`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🎬 iQiyi`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🎵 Tiktok`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🎬 YouTube`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=📺 Disney`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=📺 Netflix`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🌐 Google`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🐹 OpenAI`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🖥 Microsoft`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🖥 Learning`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=📟 Twitter`select`[]Nexitally`[]DIRECT`[].*
-custom_proxy_group=📺 International-Media`select`[]Nexitally`[]DIRECT`[].*
+custom_proxy_group=📺 International-Media`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=China-Media`select`[]DIRECT`[]Nexitally
 custom_proxy_group=Hijacking`select`[]REJECT`[]DIRECT
 custom_proxy_group=China-Websites`select`[]DIRECT`[]Nexitally
