--- a/clash/ziyong.ini
+++ b/clash/ziyong.ini
@@ -30,8 +30,8 @@ custom_proxy_group=Nexitally`select`.*
 custom_proxy_group=🎬 Emby`select`[]Nexitally`.*
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]Nexitally`.*
 custom_proxy_group=📲 Telegram`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=🎬 Bilibili`select`[]DIREC`[]Nexitally`.*
-custom_proxy_group=🎬 Bilibili`select`[]Nexitally`[]DIREC`.*
+custom_proxy_group=🎬 Bilibili`select`[]DIRECT`[]Nexitally`.*
+custom_proxy_group=🎬 Donghuafeng`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🎬 myTVSUPER`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=📲 LineTV`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🎬 iQiyi`select`[]Nexitally`[]DIRECT`.*
@@ -43,7 +43,7 @@ custom_proxy_group=🌐 Google`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🐹 OpenAI`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🖥 Microsoft`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🖥 Learning`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=📟 Twitter`select`[]Nexitally`[]DIRECT`[].*
+custom_proxy_group=📟 Twitter`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=📺 International-Media`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=China-Media`select`[]DIRECT`[]Nexitally
 custom_proxy_group=Hijacking`select`[]REJECT`[]DIRECT
