--- a/clash/ziyong.ini
+++ b/clash/ziyong.ini
@@ -34,7 +34,7 @@ custom_proxy_group=🎬 Bilibili`select`[]DIRECT`[]Nexitally`.*
 custom_proxy_group=🎬 Donghuafeng`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🎬 myTVSUPER`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=📲 LineTV`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=🎬 iQiyi`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🎬 iQiyi`select`[]DIRECT`[]Nexitally`.*
 custom_proxy_group=🎵 Tiktok`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🎬 YouTube`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=📺 Disney`select`[]Nexitally`[]DIRECT`.*
