--- a/clash/ziyong.ini
+++ b/clash/ziyong.ini
@@ -27,7 +27,7 @@ ruleset=China-Websites,https://raw.githubusercontent.com/boluosaidong9/boluosaid
 ruleset=Final,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Final1.list
 
 custom_proxy_group=Nexitally`select`.*
-custom_proxy_group=🎬 Emby`select`[]Nexitally`.*
+custom_proxy_group=🎬 Emby`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]Nexitally`.*
 custom_proxy_group=📲 Telegram`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🎬 YouTube`select`[]Nexitally`[]DIRECT`.*
