--- a/clash/ziyong.ini
+++ b/clash/ziyong.ini
@@ -26,7 +26,7 @@ ruleset=Final,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/
 ruleset=China-Websites,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/China-Websites1.list
 ruleset=Final,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Final1.list
 
-custom_proxy_group=Nexitally`select`.*(?!GB)
+custom_proxy_group=Nexitally`select`^(?!.*(GB|Date))
 custom_proxy_group=🎬 Emby`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]Nexitally`.*
 custom_proxy_group=📲 Telegram`select`[]Nexitally`[]DIRECT`.*
