--- a/clash/ziyong.ini
+++ b/clash/ziyong.ini
@@ -23,8 +23,8 @@ ruleset=China-Media,https://raw.githubusercontent.com/boluosaidong9/boluosaidong
 ruleset=Hijacking,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Hijacking.list
 ruleset=China-Websites,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/China-Websites.list
 ruleset=Final,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Final.list
-ruleset=China-Websites,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/China-Websites1.list
-ruleset=Final,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Final1.list
+ruleset=China-Websites,[]GEOIP,CN
+ruleset=Final,[]FINAL
 
 custom_proxy_group=Nexitally`select`.*
 custom_proxy_group=🎬 Emby`select`[]Nexitally`[]DIRECT`.*
