--- a/clash/ziyong.ini
+++ b/clash/ziyong.ini
@@ -32,7 +32,7 @@ custom_proxy_group=🍎 Apple`select`[]DIRECT`[]Nexitally`.*
 custom_proxy_group=📲 Telegram`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🎬 YouTube`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🎬 Bilibili`select`[]DIRECT`[]Nexitally`.*
-custom_proxy_group=🎬 Donghuafeng`select`[]Nexitally`台湾节点`[]DIRECT`.*
+custom_proxy_group=🎬 Donghuafeng`select`[]Nexitally`[]台湾节点`[]DIRECT`.*
 custom_proxy_group=🎬 myTVSUPER`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=📲 LineTV`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🎬 iQiyi`select`[]DIRECT`[]Nexitally`.*
