--- a/clash/ziyong.ini
+++ b/clash/ziyong.ini
@@ -50,6 +50,7 @@ custom_proxy_group=Hijacking`select`[]REJECT`[]DIRECT
 custom_proxy_group=China-Websites`select`[]DIRECT`[]Nexitally
 custom_proxy_group=Final`select`[]Nexitally`[]DIRECT
 custom_proxy_group=台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://1.1.1.1/generate_204`300,,50
+custom_proxy_group=台湾节点`fallback`(台|新北|彰化|TW|Taiwan)`http://1.1.1.1/generate_204`300
 
 enable_rule_generator=true
 overwrite_original_rules=true
