--- a/clash/ziyong.ini
+++ b/clash/ziyong.ini
@@ -32,7 +32,7 @@ custom_proxy_group=🍎 Apple`select`[]DIRECT`[]Nexitally`.*
 custom_proxy_group=📲 Telegram`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🎬 YouTube`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🎬 Bilibili`select`[]DIRECT`[]Nexitally`.*
-custom_proxy_group=🎬 Donghuafeng`select`[]Nexitally`[]台湾节点`[]台湾`[]DIRECT`.*
+custom_proxy_group=🎬 Donghuafeng`select`[]Nexitally`[]台湾节点`[]DIRECT`.*
 custom_proxy_group=🎬 myTVSUPER`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=📲 LineTV`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🎬 iQiyi`select`[]DIRECT`[]Nexitally`.*
@@ -50,7 +50,7 @@ custom_proxy_group=Hijacking`select`[]REJECT`[]DIRECT
 custom_proxy_group=China-Websites`select`[]DIRECT`[]Nexitally
 custom_proxy_group=Final`select`[]Nexitally`[]DIRECT
 custom_proxy_group=台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://1.1.1.1/generate_204`300,,50
-custom_proxy_group=台湾`fallback`(台|新北|彰化|TW|Taiwan)`http://1.1.1.1/generate_204`300,100,100
+;custom_proxy_group=台湾节点`fallback`(台|新北|彰化|TW|Taiwan)`http://1.1.1.1/generate_204`300,,100
 
 enable_rule_generator=true
 overwrite_original_rules=true
