--- a/clash/ziyong.ini
+++ b/clash/ziyong.ini
@@ -19,6 +19,7 @@ ruleset=🖥 Microsoft,https://raw.githubusercontent.com/boluosaidong9/boluosaid
 ruleset=🖥 Learning,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Learning.list
 ruleset=📟 Twitter,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Twitter.list
 ruleset=📺 International-Media,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/International-Media.list
+;ruleset=📺 International-Media,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=China-Media,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/China-Media.list
 ruleset=Hijacking,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Hijacking.list
 ruleset=China-Websites,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/China-Websites.list
