--- a/clash/ziyong.ini
+++ b/clash/ziyong.ini
@@ -18,6 +18,7 @@ ruleset=🐹 OpenAI,https://raw.githubusercontent.com/boluosaidong9/boluosaidong
 ruleset=🖥 Microsoft,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Microsoft.list
 ruleset=🖥 Learning,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Learning.list
 ruleset=📟 Twitter,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Twitter.list
+ruleset=🎬 PikPak,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/PikPak
 ruleset=📺 International-Media,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/International-Media.list
 ;ruleset=📺 International-Media,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=China-Media,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/China-Media.list
@@ -45,6 +46,7 @@ custom_proxy_group=🐹 OpenAI`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🖥 Microsoft`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🖥 Learning`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=📟 Twitter`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🎬 PikPak,`select`[]DIRECT`[]Nexitally`.*
 custom_proxy_group=📺 International-Media`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=China-Media`select`[]DIRECT`[]Nexitally
 custom_proxy_group=Hijacking`select`[]REJECT`[]DIRECT
