--- a/clash/ziyong.ini
+++ b/clash/ziyong.ini
@@ -46,7 +46,7 @@ custom_proxy_group=🐹 OpenAI`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🖥 Microsoft`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🖥 Learning`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=📟 Twitter`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=🎬 PikPak,`select`[]DIRECT`[]Nexitally`.*
+custom_proxy_group=🎬 PikPak`select`[]DIRECT`[]Nexitally`.*
 custom_proxy_group=📺 International-Media`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=China-Media`select`[]DIRECT`[]Nexitally
 custom_proxy_group=Hijacking`select`[]REJECT`[]DIRECT
