--- a/clash/ziyong.ini
+++ b/clash/ziyong.ini
@@ -18,7 +18,7 @@ ruleset=🐹 OpenAI,https://raw.githubusercontent.com/boluosaidong9/boluosaidong
 ruleset=🖥 Microsoft,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Microsoft.list
 ruleset=🖥 Learning,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Learning.list
 ruleset=📟 Twitter,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Twitter.list
-ruleset=🎬 PikPak,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/PikPak
+ruleset=🎬 PikPak,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/PikPak.list
 ruleset=📺 International-Media,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/International-Media.list
 ;ruleset=📺 International-Media,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=China-Media,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/China-Media.list
