--- a/clash/ziyong2.ini
+++ b/clash/ziyong2.ini
@@ -1,1 +1,68 @@
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+ruleset=🍎 Apple,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Apple.list
+ruleset=🎬 Emby,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Emby.list
+ruleset=📲 Telegram,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Telegram.list
+ruleset=Final,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Final2.list
+ruleset=🎬 Bilibili,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Bilibili.list
+ruleset=🎬 Donghuafeng,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Donghuafeng.list
+ruleset=🎬 myTVSUPER,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/myTVSUPER.list
+ruleset=📲 LineTV,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/LineTV.list
+ruleset=🎬 iQiyi,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/iQiyi.list
+ruleset=🎵 Tiktok,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Tiktok.list
+ruleset=🎬 YouTube,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/YouTube.list
+ruleset=📺 Disney,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Disney.list
+ruleset=📺 Netflix,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Netflix.list
+ruleset=🌐 Google,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Google.list
+ruleset=🐹 OpenAI,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/OpenAI.list
+ruleset=🖥 Microsoft,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Microsoft.list
+ruleset=🖥 Learning,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Learning.list
+ruleset=📟 Twitter,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Twitter.list
+ruleset=🎮 Steam,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
+ruleset=🎬 PikPak,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/PikPak.list
+ruleset=📺 International-Media,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/International-Media.list
+;ruleset=📺 International-Media,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=China-Websites,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/China-Websites.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+;ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+ruleset=🎯 全球直连,[]GEOIP,CN
+ruleset=Final,[]FINAL
 
+custom_proxy_group=Nexitally`select`.*
+custom_proxy_group=🎬 Emby`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]Nexitally`.*
+custom_proxy_group=📲 Telegram`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🎬 YouTube`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🎬 Bilibili`select`[]DIRECT`[]Nexitally`.*
+custom_proxy_group=🎬 Donghuafeng`select`[]Nexitally`[]台湾节点`[]DIRECT`.*
+custom_proxy_group=🎬 myTVSUPER`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=📲 LineTV`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🎬 iQiyi`select`[]DIRECT`[]Nexitally`.*
+custom_proxy_group=🎵 Tiktok`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=📺 Disney`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=📺 Netflix`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🌐 Google`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🐹 OpenAI`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🖥 Microsoft`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🖥 Learning`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=📟 Twitter`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🎮 Steam`select[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🎬 PikPak`select`[]DIRECT`[]Nexitally`.*
+custom_proxy_group=📺 International-Media`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=China-Media`select`[]DIRECT`[]Nexitally
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]Nexitally
+custom_proxy_group=🚀 节点选择`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=Final`select`[]Nexitally`[]DIRECT
+custom_proxy_group=台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://1.1.1.1/generate_204`300,,50
+;custom_proxy_group=台湾节点`fallback`(台|新北|彰化|TW|Taiwan)`http://1.1.1.1/generate_204`300,,100
+
+enable_rule_generator=true
+overwrite_original_rules=true
