--- a/clash/ziyong2.ini
+++ b/clash/ziyong2.ini
@@ -54,11 +54,14 @@ custom_proxy_group=🐹 OpenAI`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🖥 Microsoft`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🖥 Learning`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=📟 Twitter`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=🎮 Steam`select[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🎮 Steam`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🎬 PikPak`select`[]DIRECT`[]Nexitally`.*
 custom_proxy_group=📺 International-Media`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=China-Media`select`[]DIRECT`[]Nexitally
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]Nexitally
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]Nexitally`.*
+custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🚀 节点选择`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=Final`select`[]Nexitally`[]DIRECT
 custom_proxy_group=台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://1.1.1.1/generate_204`300,,50
