--- a/clash/ziyong2.ini
+++ b/clash/ziyong2.ini
@@ -27,6 +27,7 @@ ruleset=🎮 Steam,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clas
 ruleset=🎬 PikPak,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/PikPak.list
 ruleset=📺 International-Media,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/International-Media.list
 ;ruleset=📺 International-Media,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=China-Media,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/China-Media.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ;ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
