--- a/clash/ziyong2.ini
+++ b/clash/ziyong2.ini
@@ -52,7 +52,7 @@ custom_proxy_group=🖥 Microsoft`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🖥 Learning`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=📟 Twitter`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🎮 Steam`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]Nexitally`.*
 custom_proxy_group=🎬 PikPak`select`[]DIRECT`[]Nexitally`.*
 custom_proxy_group=📺 International-Media`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=China-Media`select`[]DIRECT`[]Nexitally
