--- a/clash/ziyong2.ini
+++ b/clash/ziyong2.ini
@@ -13,6 +13,7 @@ ruleset=🎬 Donghuafeng,https://raw.githubusercontent.com/boluosaidong9/boluosa
 ruleset=🎬 myTVSUPER,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/myTVSUPER.list
 ruleset=📲 LineTV,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/LineTV.list
 ruleset=🎬 iQiyi,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/iQiyi.list
+ruleset=🎬 Douyin,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DouYin/DouYin.list
 ruleset=🎵 Tiktok,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Tiktok.list
 ruleset=🎬 YouTube,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/YouTube.list
 ruleset=📺 Disney,https://raw.githubusercontent.com/boluosaidong9/boluosaidong/main/clash/Disney.list
@@ -43,6 +44,7 @@ custom_proxy_group=🎬 Donghuafeng`select`[]Nexitally`[]台湾节点`[]DIRECT`.
 custom_proxy_group=🎬 myTVSUPER`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=📲 LineTV`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🎬 iQiyi`select`[]DIRECT`[]Nexitally`.*
+custom_proxy_group=🎬 Douyin`select`[]DIRECT`[]Nexitally`.*
 custom_proxy_group=🎵 Tiktok`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=📺 Disney`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=📺 Netflix`select`[]Nexitally`[]DIRECT`.*
