--- a/clash/ziyong3.ini
+++ b/clash/ziyong3.ini
@@ -35,7 +35,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=Final,[]FINAL
 
-custom_proxy_group=Nexitally`select`.*
+custom_proxy_group=Nexitally`select`.*`https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Direct.png
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]Nexitally`.*
 custom_proxy_group=📲 Telegram`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🎬 YouTube`select`[]Nexitally`[]DIRECT`.*
@@ -63,7 +63,7 @@ custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🚀 节点选择`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=Final`select`[]Nexitally`[]DIRECT
-custom_proxy_group=台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://1.1.1.1/generate_204`300,,50,,false
+custom_proxy_group=台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://1.1.1.1/generate_204`300,,50
 ;custom_proxy_group=台湾节点`fallback`(台|新北|彰化|TW|Taiwan)`http://1.1.1.1/generate_204`300,,100
 
 enable_rule_generator=true
