--- a/clash/ziyong3.ini
+++ b/clash/ziyong3.ini
@@ -35,7 +35,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=Final,[]FINAL
 
-custom_proxy_group=Nexitally`select`.*`https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Direct.png
+custom_proxy_group=Nexitally`select`.*
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]Nexitally`.*
 custom_proxy_group=📲 Telegram`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=🎬 YouTube`select`[]Nexitally`[]DIRECT`.*
