--- a/clash/ziyong3.ini
+++ b/clash/ziyong3.ini
@@ -68,3 +68,5 @@ custom_proxy_group=台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://1.
 
 enable_rule_generator=true
 overwrite_original_rules=true
+
+clash_rule_base=
