--- a/clash/ziyong2.ini
+++ b/clash/ziyong2.ini
@@ -63,7 +63,7 @@ custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🚀 节点选择`select`[]Nexitally`[]DIRECT`.*
 custom_proxy_group=Final`select`[]Nexitally`[]DIRECT
-custom_proxy_group=台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://1.1.1.1/generate_204`300,,50,lazy: false
+custom_proxy_group=台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://1.1.1.1/generate_204`300,,50
 ;custom_proxy_group=台湾节点`fallback`(台|新北|彰化|TW|Taiwan)`http://1.1.1.1/generate_204`300,,100
 
 enable_rule_generator=true
