--- a/clash/ziyong2.ini
+++ b/clash/ziyong2.ini
@@ -36,32 +36,32 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=Final,[]FINAL
 
 custom_proxy_group=Nexitally`select`.*
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]Nexitally`.*
-custom_proxy_group=📲 Telegram`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=🎬 YouTube`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=🎬 Bilibili`select`[]DIRECT`[]Nexitally`.*
-custom_proxy_group=🎬 Donghuafeng`select`[]Nexitally`[]台湾节点`[]DIRECT`.*
-custom_proxy_group=🎬 myTVSUPER`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=📲 LineTV`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=🎬 iQiyi`select`[]DIRECT`[]Nexitally`.*
-custom_proxy_group=🎬 Douyin`select`[]DIRECT`[]Nexitally`.*
-custom_proxy_group=🎵 Tiktok`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=📺 Disney`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=📺 Netflix`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=🌐 Google`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=🐹 OpenAI`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=🖥 Microsoft`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=🖥 Learning`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=📟 Twitter`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=🎮 Steam`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]Nexitally`.*
-custom_proxy_group=🎬 PikPak`select`[]DIRECT`[]Nexitally`.*
-custom_proxy_group=📺 International-Media`select`[]Nexitally`[]DIRECT`.*
-custom_proxy_group=China-Media`select`[]DIRECT`[]Nexitally
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]Nexitally`.*
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]Nexitally`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=📲 Telegram`select`[]Nexitally`[]DIRECT`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=🎬 YouTube`select`[]Nexitally`[]DIRECT`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=🎬 Bilibili`select`[]DIRECT`[]Nexitally`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=🎬 Donghuafeng`select`[]Nexitally`[]台湾节点`[]DIRECT`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=🎬 myTVSUPER`select`[]Nexitally`[]DIRECT`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=📲 LineTV`select`[]Nexitally`[]DIRECT`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=🎬 iQiyi`select`[]DIRECT`[]Nexitally`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=🎬 Douyin`select`[]DIRECT`[]Nexitally`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=🎵 Tiktok`select`[]Nexitally`[]DIRECT`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=📺 Disney`select`[]Nexitally`[]DIRECT`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=📺 Netflix`select`[]Nexitally`[]DIRECT`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=🌐 Google`select`[]Nexitally`[]DIRECT`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=🐹 OpenAI`select`[]Nexitally`[]DIRECT`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=🖥 Microsoft`select`[]Nexitally`[]DIRECT`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=🖥 Learning`select`[]Nexitally`[]DIRECT`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=📟 Twitter`select`[]Nexitally`[]DIRECT`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=🎮 Steam`select`[]Nexitally`[]DIRECT`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]Nexitally`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=🎬 PikPak`select`[]DIRECT`[]Nexitally`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=📺 International-Media`select`[]Nexitally`[]DIRECT`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=China-Media`select`[]DIRECT`[]Nexitally`.*^(?!.*(500|Traffic|Expire)).*$
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]Nexitally`.*^(?!.*(500|Traffic|Expire)).*$
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🚀 节点选择`select`[]Nexitally`[]DIRECT`.*
+custom_proxy_group=🚀 节点选择`select`[]Nexitally`[]DIRECT`.*^(?!.*(500|Traffic|Expire)).*$
 custom_proxy_group=Final`select`[]Nexitally`[]DIRECT`.*^(?!.*(500|Traffic|Expire)).*$
 custom_proxy_group=台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://1.1.1.1/generate_204`300,,50
 ;custom_proxy_group=台湾节点`fallback`(台|新北|彰化|TW|Taiwan)`http://1.1.1.1/generate_204`300,,100
